<?xml version="1.0" encoding="utf-8"?>

<!--sync issue -> android:accessibilityLiveRegion="polite"-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".WalletActivity">

    <TextView
        android:id="@+id/txt_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wallet_info"
        android:textAlignment="center"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:focusable="true">
        <TextView
            android:id="@+id/txt_balance_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coins"
            android:textStyle="bold"
            android:focusable="false"/>
        <TextView
            android:id="@+id/txt_coins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/zero"
            android:focusable="false"
            android:accessibilityLiveRegion="polite"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_die"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/zero"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="85sp"
        android:accessibilityLiveRegion="polite"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:focusable="true">
        <TextView
            android:id="@+id/txt_prev_roll_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous_roll"
            android:textStyle="bold"
            android:focusable="false"/>
        <TextView
            android:id="@+id/txt_prev_roll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/zero"
            android:focusable="false"
            android:accessibilityLiveRegion="polite"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true">
            <TextView
                android:id="@+id/txt_single_sixes_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sixes_rolled"
                android:textStyle="bold"
                android:focusable="false"/>
            <TextView
                android:id="@+id/txt_single_sixes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/zero"
                android:focusable="false"
                android:accessibilityLiveRegion="polite"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true">
            <TextView
                android:id="@+id/txt_total_rolls_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_dice_rolled"
                android:textStyle="bold"
                android:focusable="false"/>
            <TextView
                android:id="@+id/txt_total_rolls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/zero"
                android:focusable="false"
                android:accessibilityLiveRegion="polite"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true">
            <TextView
                android:id="@+id/txt_double_sixes_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/double_sixes"
                android:textStyle="bold"
                android:focusable="false"/>
            <TextView
                android:id="@+id/txt_double_sixes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/zero"
                android:focusable="false"
                android:accessibilityLiveRegion="polite"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true">
            <TextView
                android:id="@+id/txt_double_others_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/double_others"
                android:textStyle="bold"
                android:focusable="false"/>
            <TextView
                android:id="@+id/txt_double_others"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/zero"
                android:focusable="false"
                android:accessibilityLiveRegion="polite"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>